explode coins out of chest

--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
     { "id": "player", "src": "img/player.png" },
     { "id": "selector", "src": "img/selector.png" },
     { "id": "trials-remaining", "src": "img/trials-remaining.png" },
+    { "id": "coin", "src": "img/coin.png" },
     { "id": "win", "src": "sounds/win.wav" },
     { "id": "sword", "src": "sounds/sword.wav" },
     { "id": "sword-low", "src": "sounds/sword-low.wav" },
