update intro animation with ease

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
     { "id": "chests", "src": "img/chests.png" },
     { "id": "text", "src": "img/text.png" },
     { "id": "player", "src": "img/player.png" },
+    { "id": "player-large", "src": "img/player-large.png" },
     { "id": "selector", "src": "img/selector.png" },
     { "id": "trials-remaining", "src": "img/trials-remaining.png" },
     { "id": "coin", "src": "img/coin.png" },
