--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,8 @@
     { "id": "win", "src": "sounds/win.wav" },
     { "id": "sword", "src": "sounds/sword.wav" },
     { "id": "sword-low", "src": "sounds/sword-low.wav" },
-    { "id": "chest-open", "src": "sounds/chest-open.wav" }
+    { "id": "chest-open", "src": "sounds/chest-open.wav" },
+    { "id": "hearo-theme", "src": "sounds/hearo-theme.mp3" },
+    { "id": "player-run", "src": "sounds/run.mp3" }
   ]
 }
