--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
     { "id": "sword-low", "src": "sounds/sword-low.wav" },
     { "id": "chest-open", "src": "sounds/chest-open.wav" },
     { "id": "hearo-theme", "src": "sounds/hearo-theme.mp3" },
-    { "id": "player-run", "src": "sounds/run.mp3" }
+    { "id": "player-run", "src": "sounds/run.mp3" },
+    { "id": "coins", "src": "sounds/coins.mp3" }
   ]
 }
